MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 1.0.9 
* added support for portlet api (MYFACES-86). Thanks to Stan Silver (JBoss Group)
* new CollapsiblePanel Component
* added forceId to <x:inputText for better reuse of legacy JavaScript
* added russian i18n.
* closed MYFACES-85 in Jira
* closed MYFACES-96 in Jira (Jason Hoo)
* closed MYFACES-91 in Jira 
* closed MYFACES-79 in Jira 
* closed MYFACES-90 in Jira (i18n support)
* closed MYFACES-86 in Jira (portlet)
* closed MYFACES-83 in Jira (Refactored HtmlTableRendererBase)
* closed MYFACES-82 in Jira (Use submitted value for Radio Buttons)
* closed MYFACES-81 in Jira (StateManager.SerializedView should not implement Serializable)
* closed MFACES-76 in Jira
* closed MFACES-74 in Jira
----------------------------------------------------------------------
Changes in Release 1.0.8 beta_RC2
* added a new RenderKit, that renders WML. Thanks to Jiri Zaloudek for his contribution
* upgrade the components use the ExtensionsFilter
  this means you don't need to include the myfaces javascripts and style sheets in your app anymore.
* bug fix examples webapp libraries for tomcat version > 5.5
* new x:buffer component
----------------------------------------------------------------------
Changes in Release 1.0.8 beta_RC1
* move to Apache Incubator (root package is now "org.apache.myfaces")
* providing a tld for MyFaces custom components, that still contains
  the 'old' sf-URI name for backward compatibility
* i18n support for Brazilian Portuguese; thanks to Rogerio Pereira
* bug fix #1045363 New <br> and &nbsp; 'feature'
* bug fix MYFACES-9: store iconChildMiddle in component state
* bug fix #1006636 VisibleOnUserRole attribute for x:panelTab tag
* bug fix #1049792 rendered attribute is disabled for commandNavigation
* bug fix #1042890 HtmlNavigationRenderer renders separator for parameters