@@ -257,6 +257,11 @@
   </component>
 
   <component>
+    <component-type>org.apache.myfaces.SelectOneCountry</component-type>
+    <component-class>org.apache.myfaces.custom.selectOneCountry.SelectOneCountry</component-class>
+  </component>
+
+  <component>
         <component-type>org.apache.myfaces.Stylesheet</component-type>
       <component-class>org.apache.myfaces.custom.stylesheet.Stylesheet</component-class>
   </component>
@@ -507,6 +512,12 @@
           <renderer-type>org.apache.myfaces.Radio</renderer-type>
           <renderer-class>org.apache.myfaces.renderkit.html.ext.HtmlRadioRenderer</renderer-class>
       </renderer>
+
+		<renderer>
+            <component-family>javax.faces.SelectOne</component-family>
+            <renderer-type>org.apache.myfaces.SelectOneCountryRenderer</renderer-type>
+            <renderer-class>org.apache.myfaces.custom.selectOneCountry.SelectOneCountryRenderer</renderer-class>
+        </renderer>
 
       <renderer>
           <component-family>javax.faces.Output</component-family>
