@@ -1392,6 +1392,29 @@
         </attribute>
     </tag>
 
+	<!-- selectOneCountry -->
+    <tag>
+        <name>selectOneCountry</name>
+        <tag-class>org.apache.myfaces.custom.selectOneCountry.SelectOneCountryTag</tag-class>
+        <body-content>JSP</body-content>
+        <description>
+            A localized list of countries choose box.
+            The value binds to the country ISO 3166 code.
+			The official codes list is available here :
+			http://www.iso.ch/iso/en/prods-services/iso3166ma/02iso-3166-code-lists/list-en1.html
+        </description>
+        <attribute>
+            <name>maxLength</name>
+            <required>false</required>
+            <rtexprvalue>false</rtexprvalue>
+            <description>
+               Integer equals to the maximum number of characters in the country name.
+            </description>
+        </attribute>
+        &standard_select_one_menu_attributes;
+        &user_role_attributes;
+        &ext_forceId_attribute;
+    </tag>
 
 	<!-- stylesheet -->
 
