@@ -35,6 +35,7 @@ nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
 nav_HtmlEditor		= Html Editor
 nav_forceId         = ForceId
+nav_selectOneCountry= Select a country box
 
 nav_swapimage       = SwapImage
 # buttons
