@@ -1,0 +1,73 @@
+<%@ page session="false" contentType="text/html;charset=utf-8"%>
+<%@ taglib uri="http://java.sun.com/jsf/html" prefix="h"%>
+<%@ taglib uri="http://java.sun.com/jsf/core" prefix="f"%>
+<%@ taglib uri="http://myfaces.apache.org/extensions" prefix="x"%>
+<html>
+
+<!--
+/*
+ * Copyright 2004 The Apache Software Foundation.
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+//-->
+
+<%@include file="inc/head.inc" %>
+
+<body>
+
+<f:view>
+
+    <f:loadBundle basename="org.apache.myfaces.examples.resource.example_messages" var="example_messages"/>
+
+    <x:panelLayout id="page" layout="#{globalOptions.pageLayout}"
+            styleClass="pageLayout"
+            headerClass="pageHeader"
+            navigationClass="pageNavigation"
+            bodyClass="pageBody"
+            footerClass="pageFooter" >
+
+        <f:facet name="header">
+            <f:subview id="header">
+                <jsp:include page="inc/page_header.jsp" />
+            </f:subview>
+        </f:facet>
+
+        <f:facet name="navigation">
+            <f:subview id="menu" >
+                <jsp:include page="inc/navigation.jsp" />
+            </f:subview>
+        </f:facet>
+
+        <f:facet name="body">
+            <h:panelGroup>
+                <h:form>
+                    <x:selectOneCountry value="#{country.code}" maxLength="25" onchange="this.form.submit();"/>
+                    <f:verbatim><br/></f:verbatim>
+                    <h:outputLabel for="countryCode" value="Code : "/>
+                    <h:outputText id="countryCode" value="#{country.code}"/>
+                    <f:verbatim><br/><br/></f:verbatim>
+                    <h:commandButton value="Update"/>
+                </h:form>
+            </h:panelGroup>
+        </f:facet>
+
+        <%@include file="inc/page_footer.jsp" %>
+
+    </x:panelLayout>
+
+</f:view>
+
+</body>
+
+</html>
