@@ -5,6 +5,7 @@ MyFaces Release Notes
 Changes in Release 1.0.9 
 * added support for portlet api (MYFACES-86). Thanks to Stan Silver (JBoss Group)
 * new CollapsiblePanel Component
+* new selectOneCountry component
 * added forceId to <x:inputText for better reuse of legacy JavaScript
 * added russian i18n.
 * closed MYFACES-85 in Jira
